--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "RUSTFLAGS=\"-A warnings\" wasm-pack build src-rust --target web --out-dir ../dist && tsc && vite build",
+    "build:rust": "RUSTFLAGS=\"-A warnings\" wasm-pack build src-rust --target web --out-dir ../dist",
+    "build:ts": "tsc",
+    "build:vite": "vite build",
+    "build": "npm run build:rust && npm run build:ts && npm run build:vite",
     "preview": "vite preview"
   },
   "dependencies": {
