--- a/src-rust/Cargo.toml
+++ b/src-rust/Cargo.toml
@@ -21,11 +21,12 @@ wasm-bindgen = "0.2.104"
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
-web-sys = { version = "0.3.81", features = ["Window", "Document", "Element", "HtmlCanvasElement", "GpuCanvasContext", "Gpu"] }
+web-sys = { version = "0.3.81", features = ["Window", "Document", "Element", "HtmlCanvasElement", "GpuCanvasContext", "Gpu", "Worker"] }
 wgpu = { version = "27.0.1", features = ["web"] }
 wasm-bindgen-futures = "0.4.54"
 wasm-bindgen-file-reader = "1.0.0"
 nifti = { version = "0.17.0", path = "forks/nifti-rs" }
+js-sys = "0.3.81"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
