--- a/src-rust/Cargo.toml
+++ b/src-rust/Cargo.toml
@@ -28,6 +28,7 @@ wasm-bindgen-file-reader = "1.0.0"
 nifti = { version = "0.17.0", path = "forks/nifti-rs" }
 js-sys = "0.3.81"
 serde-wasm-bindgen = "0.6.5"
+either = "1.15.0"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
