--- a/src-rust/Cargo.toml
+++ b/src-rust/Cargo.toml
@@ -30,6 +30,7 @@ js-sys = "0.3.81"
 serde = { version = "1.0.228", features = ["derive"] }
 serde-wasm-bindgen = "0.6.5"
 ndarray = "0.16.1"
+bytemuck = "1.24.0"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
