--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "~5.6.2",
+    "typescript": "^5.9.3",
     "vite": "^6.0.3"
   }
 }
