--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "sass-embedded": "^1.93.3",
     "typescript": "^5.9.3",
     "vite": "^6.0.3"
   }
