--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "sass-embedded": "^1.93.3",
     "typescript": "^5.9.3",
+    "typescript-plugin-css-modules": "^5.2.0",
     "vite": "^6.0.3"
   }
 }
