--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,12 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable", "webworker"],
+    "plugins": [{
+      "name": "typescript-plugin-css-modules",
+      "options": {
+        "classnameTransform": "camelCase"
+      }
+    }],
     "module": "ESNext",
     "skipLibCheck": true,
 
